--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "routes": [
+    "builds": [
         {
-            "src": "/(.*)",
-            "dest": "/$1"
+            "src": "**/*",
+            "use": "@vercel/static"
         }
     ]
 }
